Implement sgd + momentum

--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -955,7 +955,7 @@
     "# Answer:\n",
     "The training seems to be senstive to the initialization standard deviation scale. My theory behind this is scale of the gradient might be affected by the number of multiplications against the weights based on the depth of the networks.\n",
     "\n",
-    "Another aspect is probably because of the ddd\n"
+    "Another aspect is probably because of the effects of internal covariate shift is amplified with deeper networks. So, the learning rate behind too high could cause the distributions of each layer to shift too quickly, thus, complicating the learning process.\n"
    ]
   },
   {
@@ -984,13 +984,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "next_w error:  8.88234703351e-09\n",
+      "velocity error:  4.26928774328e-09\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.optim import sgd_momentum\n",
     "\n",
