--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -1201,13 +1201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "next_w error:  1.0\n",
+      "cache error:  0.0263929618768\n"
+     ]
+    }
+   ],
    "source": [
     "# Test RMSProp implementation; you should see errors less than 1e-7\n",
     "from cs231n.optim import rmsprop\n",
@@ -1237,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1248,7 +1257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "next_w error:  0.00152184475431\n",
+      "next_w error:  1.13557634289e-07\n",
       "v error:  4.20831403811e-09\n",
       "m error:  4.21496319311e-09\n"
      ]
