Initial setup for fully connected final model

--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -1460,14 +1460,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 490) loss: 62.346136\n",
+      "(Epoch 0 / 1) train acc: 0.125000; val_acc: 0.117000\n",
+      "(Iteration 11 / 490) loss: 35.286585\n",
+      "(Iteration 21 / 490) loss: 25.284931\n",
+      "(Iteration 31 / 490) loss: 22.210599\n",
+      "(Iteration 41 / 490) loss: 15.836197\n",
+      "(Iteration 51 / 490) loss: 10.997899\n",
+      "(Iteration 61 / 490) loss: 10.762241\n",
+      "(Iteration 71 / 490) loss: 7.331721\n",
+      "(Iteration 81 / 490) loss: 6.904176\n",
+      "(Iteration 91 / 490) loss: 5.526782\n",
+      "(Iteration 101 / 490) loss: 4.071693\n",
+      "(Iteration 111 / 490) loss: 3.332298\n",
+      "(Iteration 121 / 490) loss: 3.294450\n",
+      "(Iteration 131 / 490) loss: 2.764214\n",
+      "(Iteration 141 / 490) loss: 2.764505\n",
+      "(Iteration 151 / 490) loss: 2.302070\n",
+      "(Iteration 161 / 490) loss: 2.320803\n",
+      "(Iteration 171 / 490) loss: 2.290603\n",
+      "(Iteration 181 / 490) loss: 2.435281\n",
+      "(Iteration 191 / 490) loss: 2.547723\n",
+      "(Iteration 201 / 490) loss: 1.985062\n",
+      "(Iteration 211 / 490) loss: 2.558297\n",
+      "(Iteration 221 / 490) loss: 2.136276\n",
+      "(Iteration 231 / 490) loss: 2.002413\n",
+      "(Iteration 241 / 490) loss: 2.086661\n",
+      "(Iteration 251 / 490) loss: 2.201321\n",
+      "(Iteration 261 / 490) loss: 2.112828\n",
+      "(Iteration 271 / 490) loss: 2.130269\n",
+      "(Iteration 281 / 490) loss: 2.210338\n",
+      "(Iteration 291 / 490) loss: 1.800966\n",
+      "(Iteration 301 / 490) loss: 1.992788\n",
+      "(Iteration 311 / 490) loss: 2.205802\n",
+      "(Iteration 321 / 490) loss: 1.978440\n",
+      "(Iteration 331 / 490) loss: 1.963433\n",
+      "(Iteration 341 / 490) loss: 1.933897\n",
+      "(Iteration 351 / 490) loss: 1.966106\n",
+      "(Iteration 361 / 490) loss: 1.970297\n",
+      "(Iteration 371 / 490) loss: 1.895396\n",
+      "(Iteration 381 / 490) loss: 2.192177\n",
+      "(Iteration 391 / 490) loss: 1.939625\n",
+      "(Iteration 401 / 490) loss: 1.851785\n",
+      "(Iteration 411 / 490) loss: 1.915520\n",
+      "(Iteration 421 / 490) loss: 2.067054\n",
+      "(Iteration 431 / 490) loss: 2.119934\n",
+      "(Iteration 441 / 490) loss: 2.033228\n",
+      "(Iteration 451 / 490) loss: 2.026262\n",
+      "(Iteration 461 / 490) loss: 1.835044\n",
+      "(Iteration 471 / 490) loss: 1.781515\n",
+      "(Iteration 481 / 490) loss: 1.959835\n",
+      "(Epoch 1 / 1) train acc: 0.343000; val_acc: 0.315000\n"
+     ]
+    }
+   ],
    "source": [
     "best_model = None\n",
     "################################################################################\n",
@@ -1475,7 +1533,22 @@
     "# batch normalization and dropout useful. Store your best model in the         #\n",
     "# best_model variable.                                                         #\n",
     "################################################################################\n",
-    "pass\n",
+    "update_rule = 'adam'\n",
+    "learning_rate = 1e-3\n",
+    "model = FullyConnectedNet([200, 200], \n",
+    "                          weight_scale=5e-2,\n",
+    "                          dtype=np.float64)\n",
+    "solver = Solver(model,\n",
+    "                data, \n",
+    "                num_epochs=1,\n",
+    "                batch_size=100,\n",
+    "                update_rule=update_rule,\n",
+    "                optim_config={\n",
+    "                    'learning_rate': learning_rate\n",
+    "                },\n",
+    "                verbose=True)\n",
+    "solver.train()\n",
+    "best_model = solver.model\n",
     "################################################################################\n",
     "#                              END OF YOUR CODE                                #\n",
     "################################################################################"
@@ -1494,13 +1567,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation set accuracy:  0.315\n",
+      "Test set accuracy:  0.33\n"
+     ]
+    }
+   ],
    "source": [
     "y_test_pred = np.argmax(best_model.loss(data['X_test']), axis=1)\n",
     "y_val_pred = np.argmax(best_model.loss(data['X_val']), axis=1)\n",
