Update tensorflow ipython

--- a/assignment2/TensorFlow.ipynb
+++ b/assignment2/TensorFlow.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -404,8 +404,6 @@
     "    conv1_h = math.ceil(float(input_h - conv1_filter_h + 1) / conv1_stride)\n",
     "    \n",
     "    # batch norm\n",
-    "    mean = tf.get_variable(\"mean\", shape=[1, conv1_h, conv1_w, conv1_channel])\n",
-    "    variance = tf.get_variable(\"variance\", shape=[1, conv1_h, conv1_w, conv1_channel])\n",
     "    offset = tf.get_variable(\"offset\", shape=[conv1_channel])\n",
     "    scale = tf.get_variable(\"scale\", shape=[conv1_channel])\n",
     "    \n",
@@ -429,9 +427,10 @@
     "                      strides=[1,1,1,1],\n",
     "                      padding='VALID')\n",
     "    relu1 = tf.nn.relu(conv1 + bconv1)\n",
+    "    batch_mean1, batch_var1 = tf.nn.moments(relu1,[0])\n",
     "    batch_norm = tf.nn.batch_normalization(relu1,\n",
-    "                                           mean,\n",
-    "                                           variance,\n",
+    "                                           batch_mean1,\n",
+    "                                           batch_var1,\n",
     "                                           offset,\n",
     "                                           scale,\n",
     "                                           variance_epsilon=1e-8,\n",
@@ -461,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -470,7 +469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.1 ms ± 1.72 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "22.2 ms ± 737 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
       "(64, 10)\n",
       "True\n"
      ]
@@ -561,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -574,14 +573,14 @@
     "#    mean_loss: a TensorFlow variable (scalar) with numerical loss\n",
     "#    optimizer: a TensorFlow optimizer\n",
     "# This should be ~3 lines of code!\n",
-    "mean_loss = None\n",
-    "optimizer = None\n",
-    "pass\n"
+    "total_loss = tf.nn.softmax_cross_entropy_with_logits_v2(labels=tf.one_hot(y, 10), logits=y_out)\n",
+    "mean_loss = tf.reduce_mean(total_loss)\n",
+    "optimizer = tf.train.RMSPropOptimizer(1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -603,11 +602,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training\n",
+      "Iteration 0: with minibatch training loss = 2.3 and accuracy of 0.16\n",
+      "Iteration 100: with minibatch training loss = 1.82 and accuracy of 0.33\n",
+      "Iteration 200: with minibatch training loss = 1.67 and accuracy of 0.44\n",
+      "Iteration 300: with minibatch training loss = 1.32 and accuracy of 0.58\n",
+      "Iteration 400: with minibatch training loss = 1.26 and accuracy of 0.53\n",
+      "Iteration 500: with minibatch training loss = 1.19 and accuracy of 0.56\n",
+      "Iteration 600: with minibatch training loss = 1.24 and accuracy of 0.55\n",
+      "Iteration 700: with minibatch training loss = 1.22 and accuracy of 0.55\n",
+      "Epoch 1, Overall loss = 1.52 and accuracy of 0.453\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.524411200854243, 0.45281632653061227)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sess = tf.Session()\n",
     "\n",
@@ -627,11 +653,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation\n",
+      "Epoch 1, Overall loss = 1.24 and accuracy of 0.579\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.2414331893920898, 0.579)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print('Validation')\n",
     "run_model(sess,y_out,mean_loss,X_val,y_val,1,64)"
