--- a/assignment3/RNN_Captioning.ipynb
+++ b/assignment3/RNN_Captioning.ipynb
@@ -752,9 +752,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py36-test",
    "language": "python",
-   "name": "python3"
+   "name": "py36-test"
   },
   "language_info": {
    "codemirror_mode": {
@@ -766,9 +766,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2+"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
