Attempt at building generator architecture

--- a/assignment3/GANs-TensorFlow.ipynb
+++ b/assignment3/GANs-TensorFlow.ipynb
@@ -1928,11 +1928,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect number of parameters in generator. 6580801 instead of 6595521. Check your achitecture.\n"
+     ]
+    }
+   ],
    "source": [
     "def generator(z):\n",
     "    \"\"\"Generate images from a random noise vector.\n",
@@ -1945,7 +1953,63 @@
     "    \"\"\"\n",
     "    with tf.variable_scope(\"generator\"):\n",
     "        # TODO: implement architecture\n",
-    "        pass\n",
+    "        dense_1 = tf.layers.dense(z, 1024, activation=tf.nn.relu)\n",
+    "        \n",
+    "        offset_1 = tf.get_variable('offset_1', shape=[1024])\n",
+    "        scale_1 = tf.get_variable('scale_1', shape=[1024])\n",
+    "        batch_mean_1, batch_var_1 = tf.nn.moments(dense_1, [0])\n",
+    "        batch_norm_1 = tf.nn.batch_normalization(dense_1, \n",
+    "                                                     batch_mean_1,\n",
+    "                                                     batch_var_1,\n",
+    "                                                     offset_1,\n",
+    "                                                     scale_1,\n",
+    "                                                     variance_epsilon=1e-8)\n",
+    "        \n",
+    "        dense_2 = tf.layers.dense(batch_norm_1, 7*7*128, activation=tf.nn.relu)\n",
+    "        \n",
+    "        offset_2 = tf.get_variable('offset_2', shape=[7*7*128])\n",
+    "        scale_2 = tf.get_variable('scale_2', shape=[7*7*128])\n",
+    "        batch_mean_2, batch_var_2 = tf.nn.moments(dense_2, [0])\n",
+    "        batch_norm_2 = tf.nn.batch_normalization(dense_2,\n",
+    "                                                    batch_mean_2,\n",
+    "                                                    batch_var_2,\n",
+    "                                                    offset_2,\n",
+    "                                                    scale_2,\n",
+    "                                                    variance_epsilon=1e-8)\n",
+    "        # batch_norm_2 [N, 7*7*128]\n",
+    "        image_tensor = tf.reshape(batch_norm_2, [z.shape[0], 7, 7, 128])\n",
+    "        \n",
+    "        w_conv_1 = tf.get_variable('w_conv_1', [4, 4, 64, 128])\n",
+    "        b_conv_1 = tf.get_variable('b_conv_1', [64])\n",
+    "        conv_1 = tf.nn.conv2d_transpose(image_tensor,\n",
+    "                                        w_conv_1,\n",
+    "                                        [-1, 14, 14, 64],\n",
+    "                                        [1, 2, 2, 1],\n",
+    "                                        padding='VALID'\n",
+    "                                       ) + b_conv_1\n",
+    "        relu_conv_1 = tf.nn.relu(conv_1)\n",
+    "        \n",
+    "        # batch_norm\n",
+    "        offset_3 = tf.get_variable('offset_3', [64])\n",
+    "        scale_3 = tf.get_variable('scale_3', [64])\n",
+    "        batch_mean_3, batch_var_3 = tf.nn.moments(relu_conv_1, [0])\n",
+    "        batch_norm_3 = tf.nn.batch_normalization(relu_conv_1,\n",
+    "                                                batch_mean_3,\n",
+    "                                                batch_var_3,\n",
+    "                                                offset_3,\n",
+    "                                                scale_3,\n",
+    "                                                variance_epsilon=1e-8)\n",
+    "        w_conv_2 = tf.get_variable('w_conv_2', [4, 4, 1, 64])\n",
+    "        b_conv_2 = tf.get_variable('b_conv_2', [1])\n",
+    "        \n",
+    "        conv_2 = tf.nn.conv2d_transpose(batch_norm_3,\n",
+    "                                        w_conv_2,\n",
+    "                                        [-1, 28, 28, 1],\n",
+    "                                        [1, 2, 2, 1],\n",
+    "                                        padding='VALID'\n",
+    "                                       ) + b_conv_2\n",
+    "        img = tf.tanh(conv_2)\n",
+    "        \n",
     "        return img\n",
     "test_generator(6595521)"
    ]
